--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:e2e": "playwright test",
+    "lint": "pnpm exec eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:check": "pnpm exec eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "pnpm exec prettier --write .",
+    "format:check": "pnpm exec prettier --check .",
+    "type-check": "pnpm exec tsc --noEmit",
+    "test": "pnpm exec jest",
+    "test:watch": "pnpm exec jest --watch",
+    "test:coverage": "pnpm exec jest --coverage",
+    "test:e2e": "pnpm exec playwright test",
     "prepare": "husky install",
-    "firebase:setup": "node scripts/setup-firebase.js",
+    "firebase:setup": "pnpm exec node scripts/setup-firebase.js",
     "firebase:test": "curl -X GET http://localhost:3000/api/firebase/config",
-    "firebase:deploy": "firebase deploy",
-    "firebase:rules": "firebase deploy --only firestore:rules",
-    "firebase:indexes": "firebase deploy --only firestore:indexes",
-    "firebase:emulator": "firebase emulators:start",
-    "gcs:setup": "node scripts/setup-gcs.js",
-    "gcs:configure": "node scripts/configure-gcs-bucket.js",
+    "firebase:deploy": "pnpm exec firebase deploy",
+    "firebase:rules": "pnpm exec firebase deploy --only firestore:rules",
+    "firebase:indexes": "pnpm exec firebase deploy --only firestore:indexes",
+    "firebase:emulator": "pnpm exec firebase emulators:start",
+    "gcs:setup": "pnpm exec node scripts/setup-gcs.js",
+    "gcs:configure": "pnpm exec node scripts/configure-gcs-bucket.js",
     "gcs:test": "curl -X GET http://localhost:3000/api/storage/test",
-    "gcs:test-direct": "node scripts/test-gcs-direct.js",
+    "gcs:test-direct": "pnpm exec node scripts/test-gcs-direct.js",
     "storage:test": "pnpm gcs:test"
   },
   "dependencies": {
@@ -77,6 +77,7 @@
     "husky": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^4.0.0",
@@ -99,5 +100,11 @@
         "eslint": "9"
       }
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,md,json,css}": [
+      "pnpm exec prettier --write",
+      "pnpm exec eslint --fix"
+    ]
   }
 }
